Paths organization and listing participating channels

--- a/LedgerAPI/package.json
+++ b/LedgerAPI/package.json
@@ -20,6 +20,7 @@
     "fabric-ca-client": "^2.2.20",
     "fabric-network": "^2.2.20",
     "http": "^0.0.1-security",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
